# gsvg

./: Makefile.am  README.md  configure.ac  meson.build  valalib.mk
data/: Makefile.am  gsvg.pc.in  meson.build
docs/: meson.build
examples/python/: line.py  rect.py  svg-text-span.py  text.py
src/: Makefile.am  css-classes.vala  css-interfaces.vala  gsvg-basic-shapes.vala  gsvg-coord.vala  gsvg-dom-interfaces-basic-shapes.vala  gsvg-dom-interfaces-coord.vala  gsvg-dom-interfaces-filter.vala  gsvg-dom-interfaces-fonts.vala  gsvg-dom-interfaces-interactivity.vala  gsvg-dom-interfaces-meta-ext.vala  gsvg-dom-interfaces-painting.vala  gsvg-dom-interfaces-path.vala  gsvg-dom-interfaces-struct.vala  gsvg-dom-interfaces-text.vala  gsvg-dom-interfaces.vala  gsvg-number.vala  gsvg-object.vala  gsvg-property-length.vala  gsvg-rect.vala  gsvg-string.vala  gsvg-svg.vala  gsvg-text.vala  gsvg.deps.in  meson.build  namespace-info.vala.in
tests/: Makefile.am  gsvg-circle-test.vala  gsvg-ellipse-test.vala  gsvg-g-test.vala  gsvg-line-test.vala  gsvg-polygons-test.vala  gsvg-polyline-test.vala  gsvg-rect-test.vala  gsvg-svg-test.vala  gsvg-test.vala  gsvg-text-test.vala  meson.build  tests-config.vala.in
